ingress-nginx/nginx-ingress-controller.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-ingress-lb
 namespace: kube-system
 labels:
   app: nginx-ingress-lb
 
spec:
 type: LoadBalancer
 externalTrafficPolicy: "Local"
 ports:
 - port: 80
   name: http
   targetPort: 80
 - port: 443
   name: https
   targetPort: 443
 selector:
   app: ingress-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-ingress-controller
 labels:
   app: ingress-nginx
 namespace: kube-system
 annotations:
   component.version: "0.30.0"
   component.revision: "2"
spec:
 replicas: 2
 selector:
   matchLabels:
     app: ingress-nginx
 template:
   metadata:
     labels:
       app: ingress-nginx
     annotations:
       prometheus.io/port: "10254"
       prometheus.io/scrape: "true"
   spec:
     securityContext:
       sysctls:
       - name: net.core.somaxconn
         value: "65535"
#       - name: net.ipv4.ip_local_port_range
#         value: "1024 65535"
#       - name: fs.file-max
#         value: "1048576"
#       - name: fs.inotify.max_user_instances
#         value: "16384"
#       - name: fs.inotify.max_queued_events
#         value: "16384"
#       - name: fs.inotify.max_user_watches
#         value: "524288"
#    #tolerations:
     #  - key: node-role.kubernetes.io/master
     #    effect: NoSchedule
     affinity:
       podAntiAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
         - labelSelector:
             matchExpressions:
             - key: app
               operator: In
               values:
                - ingress-nginx
           topologyKey: "kubernetes.io/hostname"
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
           - matchExpressions:
             - key: type
               operator: NotIn
               values:
               - virtual-kubelet
             - key: k8s.aliyun.com
               operator: NotIn
               values:
               - "true"
     serviceAccountName: nginx-ingress-controller
     priorityClassName: system-node-critical
     containers:
     - name: nginx-ingress-controller
       image: registry.cn-hangzhou.aliyuncs.com/acs/aliyun-ingress-controller:v0.30.0.2-9597b3685-aliyun
       args:
         - /nginx-ingress-controller
         - --configmap=$(POD_NAMESPACE)/nginx-configuration
         - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
         - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
         - --annotations-prefix=nginx.ingress.kubernetes.io
         - --publish-service=$(POD_NAMESPACE)/nginx-ingress-lb
         - --v=2
       ports:
       - name: http
         containerPort: 80
       - name: https
         containerPort: 443
       resources:
         requests:
           cpu: 100m
           memory: 70Mi
       livenessProbe:
         failureThreshold: 3
         httpGet:
           path: /healthz
           port: 10254
           scheme: HTTP
         initialDelaySeconds: 10
         periodSeconds: 10
         successThreshold: 1
         timeoutSeconds: 10
       readinessProbe:
         failureThreshold: 3
         httpGet:
           path: /healthz
           port: 10254
           scheme: HTTP
         periodSeconds: 10
         successThreshold: 1
         timeoutSeconds: 10
       securityContext:
         capabilities:
             drop:
             - ALL
             add:
             - NET_BIND_SERVICE
         runAsUser: 101
     nodeSelector:
       beta.kubernetes.io/os: linux
